<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myhexaville.androidtests.chat.ChatActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="57dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/list">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp">

            <EditText
                android:id="@+id/message_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/type_a_message"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

            <ImageView
                android:id="@+id/send_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:onClick="sendMessage"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_send_black_24dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
